improve button usability for mobile users, align metric containers but fix the hidden metric

--- a/src/styles/gameScreen.less
+++ b/src/styles/gameScreen.less
@@ -67,17 +67,27 @@
 			display: flex;
 			flex-direction: column;
 			gap: 0.8rem;
-			@media (hover: none) and (pointer: coarse) {
-				gap: 1.6rem;
-				.voting-button {
-					height: 3.6rem;
-				}
-			}
 			.voting-button {
 				i {
 					font-size: 2rem;
 				}
 				justify-content: space-between;
+			}
+		}
+		@media (hover: none) and (pointer: coarse) {
+			.button-container {
+				gap: 1.6rem;
+				.voting-button {
+					height: 5rem;
+					border-radius: 2.4rem;
+					font-size: 2.4rem;
+					i {
+						font-size: 3.2rem;
+					}
+				}
+			}
+			p {
+				font-size: 2rem;
 			}
 		}
 	}
